--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "> 1%",
     "last 5 versions"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.1.1"
+  },
   "devDependencies": {
     "browser-sync": "^2.18.7",
     "del": "^2.2.2",
