--- a/package.json
+++ b/package.json
@@ -13,19 +13,22 @@
     "last 5 versions"
   ],
   "dependencies": {
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "jquery-modal": "^0.8.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.7",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
-    "gulp-cssmin": "^0.1.7",
     "gulp-debug": "^3.0.0",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-include": "^2.3.1",
     "gulp-newer": "^1.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^2.4.1",
+    "gulp-uglify": "^2.0.1",
     "gulp-watch": "^4.3.11"
   }
 }
