--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "abz.test",
   "version": "1.0.0",
   "description": "test task for abz.agency",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,8 +13,13 @@
     "last 5 versions"
   ],
   "dependencies": {
+    "angular": "^1.6.2",
+    "angular-modal": "^0.5.0",
+    "angular-ui-router": "^0.4.2",
+    "express": "^4.14.1",
     "jquery": "^3.1.1",
-    "jquery-modal": "^0.8.0"
+    "jquery-modal": "^0.8.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "browser-sync": "^2.18.7",
