--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
   ],
   "dependencies": {
     "angular": "^1.6.2",
+    "angular-animate": "^1.6.2",
+    "angular-aria": "^1.6.2",
+    "angular-material": "^1.1.3",
     "angular-modal": "^0.5.0",
     "angular-ui-router": "^0.4.2",
     "express": "^4.14.1",
-    "jquery": "^3.1.1",
-    "jquery-modal": "^0.8.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
