--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "angular": "^1.6.2",
     "angular-animate": "^1.6.2",
     "angular-aria": "^1.6.2",
+    "angular-dropdowns": "^1.5.1",
     "angular-material": "^1.1.3",
     "angular-modal": "^0.5.0",
+    "angular-sanitize": "^1.6.2",
+    "angular-ui-bootstrap": "^2.5.0",
     "angular-ui-router": "^0.4.2",
     "express": "^4.14.1",
     "path": "^0.12.7"
